# wClaudeCode

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  ml_roadmap_japanese.md  pyproject.toml
.claude/hooks/: session-start.sh
accelerator_physics/single_particle/js/: index.html  package-lock.json  package.json  tsconfig.json
accelerator_physics/single_particle/js/src/: api_client.ts  main.ts  style.css
accelerator_physics/single_particle/python/api/: app.py  schemas.py
accelerator_physics/single_particle/python/examples/: fodo_demo.py  ring_demo.py
accelerator_physics/single_particle/python/tests/: test_accelerator.py
classical_mechanics/double_pendulum/cpp/examples/: case_chaotic.csv  case_intermediate.csv  double_pendulum_explore.ipynb  sensitivity_a.csv
classical_mechanics/double_pendulum/cpp/gnuplot/: plot_theta_png.gp  plot_traj_init_3panel.gp
classical_mechanics/double_pendulum/cpp/include/: double_pendulum.hpp
classical_mechanics/double_pendulum/cpp/src/: double_pendulum.cpp
classical_mechanics/double_pendulum/js/: tsconfig.json
classical_mechanics/double_pendulum/julia/examples/: double_pendulum_explore.ipynb  dp_sim.jl
classical_mechanics/double_pendulum/julia/src/: MathPhys.jl
classical_mechanics/double_pendulum/julia/tests/: runtests.jl
classical_mechanics/double_pendulum/rust/examples/: case_nearlinear.csv  double_pendulum_explore.ipynb  mass_ratio_0.25.csv  mass_ratio_4.00.csv  sensitivity_a.csv
classical_mechanics/double_pendulum/rust/src/: double_pendulum.rs  lib.rs  numerics.rs
cpp/: CMakeLists.txt
cpp/examples/: case_nearlinear.csv  dp_sim.cpp  mass_ratio_0.25.csv  mass_ratio_4.00.csv  sensitivity_b.csv  sensitivity_report.py
cpp/include/: numerics.hpp
cpp/src/: numerics.cpp
cpp/tests/: test_numerics.cpp
docs/: collective_instability_theory.md
electromagnetics/cavity_waveguide/cpp/: CMakeLists.txt
electromagnetics/cavity_waveguide/cpp/examples/: em_sim.cpp
electromagnetics/cavity_waveguide/cpp/include/: em_cavity.hpp  em_constants.hpp  em_waveguide.hpp
electromagnetics/cavity_waveguide/cpp/src/: em_cavity.cpp  em_waveguide.cpp
electromagnetics/cavity_waveguide/cpp/tests/: test_em.cpp
electromagnetics/cavity_waveguide/js/: index.html  package-lock.json  package.json
electromagnetics/cavity_waveguide/js/src/: em_physics.ts  main.ts  style.css
electromagnetics/cavity_waveguide/julia/: Project.toml
electromagnetics/cavity_waveguide/julia/examples/: em_sim.jl
electromagnetics/cavity_waveguide/julia/src/: Cavity.jl  CavityWaveguide.jl  Constants.jl  Waveguide.jl
electromagnetics/cavity_waveguide/julia/tests/: runtests.jl
electromagnetics/cavity_waveguide/python/examples/: cavity_demo.py  waveguide_demo.py
electromagnetics/cavity_waveguide/python/tests/: test_em.py
electromagnetics/cavity_waveguide/rust/: Cargo.toml
electromagnetics/cavity_waveguide/rust/src/: cavity.rs  constants.rs  lib.rs  waveguide.rs
js/: index.html  package-lock.json  package.json
js/src/: double_pendulum.ts  main.ts  style.css
julia/: Project.toml
julia/examples/: mass_ratio_0.25.csv
julia/src/: DoublePendulum.jl
misc/: typing_game.py
python/examples/: collective_instability.py  double_pendulum_demo.py  double_pendulum_explore.ipynb  ocr_formatter.py  ring_montecarlo.py  textbook_reading_helper.py
python/src/mathphys/: __init__.py  collective.py  double_pendulum.py  storage_ring.py
python/tests/: test_collective.py  test_numerics.py  test_storage_ring.py
rust/: Cargo.toml
rust/examples/: case_chaotic.csv  case_intermediate.csv  sensitivity_b.csv
rust/src/: lib.rs  main.rs
signal_processing/time_frequency_analysis/notebooks/: 01_introduction_and_uncertainty.ipynb  02_stft_spectrogram.ipynb  03_wigner_ville_distribution.ipynb  04_cohen_class.ipynb  05_instantaneous_frequency.ipynb  06_ambiguity_function.ipynb
src/mathphys/: __init__.py  accelerator.py  cavity.py  ising_model.py  numerics.py  waveguide.py
statistical_physics/ising_model_2d/cpp/: CMakeLists.txt
statistical_physics/ising_model_2d/cpp/examples/: ising_sim.cpp
statistical_physics/ising_model_2d/cpp/include/: ising_model.hpp
statistical_physics/ising_model_2d/cpp/src/: ising_model.cpp
statistical_physics/ising_model_2d/cpp/tests/: test_ising.cpp
statistical_physics/ising_model_2d/js/: index.html  package-lock.json  package.json
statistical_physics/ising_model_2d/js/src/: ising_model.ts  main.ts  style.css
statistical_physics/ising_model_2d/julia/: Project.toml
statistical_physics/ising_model_2d/julia/examples/: ising_sim.jl
statistical_physics/ising_model_2d/julia/src/: Ising.jl  IsingModel2D.jl
statistical_physics/ising_model_2d/julia/tests/: runtests.jl
statistical_physics/ising_model_2d/python/examples/: ising_demo.py
statistical_physics/ising_model_2d/python/tests/: test_ising.py
statistical_physics/ising_model_2d/rust/: Cargo.toml
statistical_physics/ising_model_2d/rust/src/: ising_model.rs  lib.rs
