[package]
name = "ising2d"
version = "0.1.0"
edition = "2021"
description = "2D Ising Model — Metropolis Monte Carlo (Statistical Physics)"

[dependencies]
# Fast, reproducible random numbers
rand = "0.8"

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "ising_sim"
path = "src/bin/ising_sim.rs"

[lib]
name = "ising2d"
path = "src/lib.rs"
